add version to  http and grpc path
